# bridge_ai

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MODAL.md  MODULE.bazel  NOTES.md  PLAN.md  RESEARCH_PLAN.md  WORKSPACE  pyproject.toml  requirements.txt  requirements_linux.txt  requirements_lock.txt
.github/workflows/: ci.yml
configs/: bootstrap1000.yaml  default.yaml  local.yaml  local_benchmark_scale.yaml  local_real.yaml  local_real_iter1.yaml  local_real_iter2.yaml  local_real_iter3.yaml  local_real_iter4.yaml  local_real_scale2000.yaml  modal.yaml  modal_benchmark_scale.yaml  modal_bootstrap1000.yaml  modal_real_scale3000.yaml  modal_scale5x.yaml  modal_search_baseline.yaml  modal_search_scale.yaml  modal_smoke.yaml  smoke.yaml  smoke_rating.yaml  smoke_search.yaml
src/bridge_ai/: __init__.py
src/bridge_ai/common/: __init__.py  actions.py  cards.py  random_utils.py  runtime_paths.py  state.py  types.py
src/bridge_ai/data/: __init__.py  belief_dataset.py  bootstrap_records.py  buffer.py  lin_parser.py  manifest.py  replay_store.py  tournament_bootstrap.py
src/bridge_ai/env/: __init__.py  bridge_env.py
src/bridge_ai/eval/: __init__.py  benchmark.py  evaluator.py  league_runner.py  ratings.py
src/bridge_ai/inference/: __init__.py  posterior_sampler.py
src/bridge_ai/infra/: __init__.py  experiment_runner.py  manifest_checker.py  modal_app.py  modal_continue.py  pipeline.py  plots.py
src/bridge_ai/models/: __init__.py  bidding_belief_transformer.py  monolithic_transformer.py
src/bridge_ai/search/: __init__.py  ismcts.py
src/bridge_ai/selfplay/: __init__.py  runner.py
src/bridge_ai/training/: __init__.py  checkpoint_bootstrap.py  checkpoint_store.py  train_loop.py
src/bridge_ai/ui/: __init__.py  streamlit_app.py
tests/: test_bridge_env.py  test_ui.py
tests/fixtures/: real_lin_records.txt
