module(name = "bridge_ai", version = "0.0.0")

bazel_dep(name = "rules_python", version = "1.7.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
use_repo(python, python_3_11 = "python_3_11")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    experimental_index_url = "https://pypi.org/simple",
    experimental_index_url_overrides = {
        "torch": "https://download.pytorch.org/whl/cpu",
    },
    hub_name = "pypi",
    python_version = "3.11",
    requirements_linux = "//:requirements_linux.txt",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")
